package tn.esprit.educlass.enums;

public enum NotificationType {
    SYSTEM,
    COURSE,
    EVALUATION
}
